v3.20.0
- Added: Add options to to Tune Async connection for slower E2 devices
- Added: Enable option to reload channels and groups once per day if changes are detected
- Added: Allow timers generated by autotimers to be deleted
- Fixed: Fix for disabling timers
- Added: Use genre from kodi for timers instead of lookup where possible

v3.19.0
- Added: Async Connection - Reconnect if Enigma2 device was or becomes unavailable, closes #154, closes #184
- Added: Notify when Channel/ChannelGroups changes are detected, closes #179
- Added: Support genres for Recordings and Timers, fixes #186
- Fixed: Instant recordings may be missing show info depending on last EPG update, fixes #185
- Added: Helper build script for MacOSX

v3.18.1
- Fixed: Crash on addon start, fixes #191

v3.18.0
- Fixed: Ensure only one call to GetEPGForChannel happens at one time, fixes #181
- Added: Update/fix server version for pvr addon
- Added: Option to skip initial EPG Load
- Fixed: Fix for zap on channel change for dreamboxes
- Added: Support for padding in certain timer types
- Fixed: Change the call web/tunersignal to web/signal so it also works on DreamOS

v3.17.0
- Added: Recording EDL support
- Added: Update Timer Types to display correctly in Manual vs EPG UIs
- Added: Updated show info regex's
- Fixed: Timer Recording not displaying description - Not being stored on STB - AddTimer Call, fixes #174
- Fixed: Fix for uncaught type_error for nlohmann/json
- Fixed: Include TV Favourites channels by default in settings
- Added: Support Last Scanned for both TV and Radio, fixes #178
- Fixed: Null pointer check for Genre EPG data from XML

v3.16.2
- Fixed: Seg fault on shutdown - Timer Updates thread accessing released object, fixes #172
- Fixed: Incorrectly used time_t instead int64 in GetStreamTimes, fixes #171
- Added: Load Addon Version
- Fixed: Clean up/partition addon debug log, fixes #159
- Added: Add user defined delay between EPG Channel Updates, fixes #158