@@ -1,9 +1,15 @@
 v3.20.0
-- Added: Add options to to Tune Async connection for slower E2 devices
+- Added: Add options to Tune Async connection for slower E2 devices
 - Added: Enable option to reload channels and groups once per day if changes are detected
 - Added: Allow timers generated by autotimers to be deleted
 - Fixed: Fix for disabling timers
 - Added: Use genre from kodi for timers instead of lookup where possible
+- Added: Support recording type fully for TV/Radio/Any channel
+- Added: By default load Last Scanned group if no TV groups found
+- Added: Limit autotimers to TV/Radio or originating channel's groups
+- Fixed: Channel Service Refs Can sometimes have alphabetic characters appended at the end, fixes #202
+- Added: For timers and autotimers without a valid channel put in error state instead of omitting
+- Fixed: IsRunning timer check not checking start time
 
 v3.19.0
 - Added: Async Connection - Reconnect if Enigma2 device was or becomes unavailable, closes #154, closes #184
